force-app/main/default/objects/Book_Rating__c/Book_Rating__c.object-meta.xml
<CustomObject>
    <label>Book Rating</label>
    <nameField>
        <label>Book Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>