force-app/main/default/objects/Book_Rating__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Book Ratings</relationshipLabel>
    <relationshipName>Book_Ratings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>