force-app/main/default/objects/Book_Rating__c/validationRules/Accepted_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Range</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &lt; 1 || Rating__c &gt; 10</errorConditionFormula>
    <errorMessage>Rating must be between 1 and 10.</errorMessage>
</ValidationRule>